# CBU-fx-pipeline

./: .env.example  .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-fetch.yml
data/: rates.parquet
data/seed/: rates_seed.parquet  seed.sql
docs/screenshots/: README.md
powerbi/: BUILD_INSTRUCTIONS.md  theme.json
scripts/: generate_seed.py
sql/: sample_queries.sql  schema.sql  view_rates_with_change.sql
src/: __init__.py  backfill.py  cbu_client.py  database.py  fetch_daily.py
tests/: __init__.py  test_cbu_client.py  test_database.py
