[project]
name = "cbu-fx-pipeline"
version = "1.0.0"
description = "Automated ETL pipeline for Central Bank of Uzbekistan (CBU) currency exchange rates, with a PostgreSQL warehouse and a Parquet serving layer for Power BI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Komron Toychiyev" }]
keywords = ["etl", "postgresql", "power-bi", "data-engineering", "exchange-rates"]
dependencies = [
    "requests>=2.31",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
cbu-fetch-daily = "src.fetch_daily:main"
cbu-backfill = "src.backfill:main"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# A pragmatic, professional-but-lightweight rule set.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]
ignore = [
    "B008",  # function call in argument defaults (not used here)
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and longer fixtures freely.
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
